Co-authored-by: CalvinEZ99 <Magic9904@users.noreply.github.com>

--- a/awal.html
+++ b/awal.html
@@ -33,14 +33,14 @@
 					<img alt="" src="real/futsal.jpg">
 					<div class="overlay">
 						<h4>Futsal Harapan Bangsa</h4>
-						<a href="#">GO TO</a>
+						<a href="futsal.html">GO TO</a>
 					</div>
 				</div>
 				<div class="box">
 					<img alt="" src="real/badminton.jpg">
 					<div class="overlay">
 						<h4>COMET</h4>
-						<a href="#">GO TO</a>
+						<a href="badminton.html">GO TO</a>
 					</div>
 				</div>
 			</div>
@@ -52,20 +52,24 @@
 			<p>Jalan Dipatiukur 80-84<br>Bandung 40132 - Indonesia<br>+62-22-250-6636 </p>
 		</div>
 		<div class="social-buttons">
-			<a href="#" class="social-button social-button--facebook" aria-label="Facebook">
+			<a href="https://web.facebook.com/ithb.bandung/?_rdc=1&_rdr" class="social-button social-button--facebook" aria-label="Facebook">
 			  <i class="fab fa-facebook-f"></i>
 			</a>
-			<a href="#" class="social-button social-button--instagram" aria-label="LinkedIn">
+			<a href="https://www.instagram.com/kampusharapanbangsa?igsh=MXczMm1zcTVnYXh3Zg==" class="social-button social-button--instagram" aria-label="LinkedIn">
 				<i class="fab fa-instagram"></i>
 			</a>
-			<a href="#" class="social-button social-button--codepen" aria-label="Snapchat">
+			<a href="https://www.tiktok.com/@ithb_?_t=8lCDfqvpX9T&_r=1" class="social-button social-button--codepen" aria-label="Snapchat">
 				<i class="fab fa-tiktok"></i>
 			</a>
-			<a href="#" class="social-button social-button--twitter" aria-label="GitHub">
+			<a href="https://x.com/kampusITHB?t=xUnyF-OE1pmjWdh0UoiPRQ&s=08" class="social-button social-button--twitter" aria-label="GitHub">
 			  <i class="fab fa-twitter"></i>
 			</a>
-			
+
 		  </div>   
 	</footer>
+
+	<div class="copyright">
+		<p> © 2024 NETHER. All rights reserved.</p> 
+	</div>
 </body>
 </html>
